Fix(style) Removes superflous spacing between fieldsets UD-32

--- a/src/styles/unibase/forms/_fieldset.sass
+++ b/src/styles/unibase/forms/_fieldset.sass
@@ -1,5 +1,5 @@
 fieldset
-    width: calc(50% - 2rem)
+    width: calc(50% - .5rem)
     max-width: pxToRem(650)
     min-width: pxToRem(450)
     border: 0
